// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComponentMenuBar Should handle an unknown menu item. 1`] = `
<div
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <Menu
    secondary={true}
    style={
      Object {
        "height": "100%",
        "margin": 0,
      }
    }
    widths={2}
  >
    <Menu
      secondary={true}
      widths={1}
    >
      <MenuItem
        fitted="horizontally"
        position="left"
        style={
          Object {
            "margin": 0,
            "padding": 0,
          }
        }
      >
        The Boxer
      </MenuItem>
    </Menu>
    <Menu
      secondary={true}
      widths={4}
    >
      <MenuItem
        fitted="horizontally"
        key="The Boxer-menu-item-0"
        position="right"
        style={
          Object {
            "flexDirection": "column",
          }
        }
      >
        <Popup
          closeOnPortalMouseLeave={false}
          closeOnTriggerClick={true}
          closeOnTriggerMouseLeave={false}
          disabled={false}
          hoverable={false}
          keepInViewPort={true}
          on="hover"
          openOnTriggerClick={true}
          openOnTriggerFocus={false}
          openOnTriggerMouseEnter={false}
          position="bottom left"
          style={
            Object {
              "opacity": 0.85,
            }
          }
          trigger={
            <Icon
              as="i"
              name="setting"
            />
          }
          wide={true}
        >
          <ConfigAccordion
            allowMultipleOpen={false}
            configs={
              Array [
                Object {
                  "Catcher": Array [
                    <GridRow
                      columns={1}
                      style={
                        Object {
                          "padding": "5px 0",
                          "width": "100%",
                        }
                      }
                    >
                      configuration for Catcher-row-0
                    </GridRow>,
                  ],
                },
              ]
            }
            gridStyle={
              Object {
                "marginTop": 0,
                "maxHeight": "350px",
                "overflow": "auto",
                "zIndex": 3,
              }
            }
            title="Config"
          />
        </Popup>
        <span
          style={
            Object {
              "fontSize": "11px",
              "visibility": "hidden",
            }
          }
        >
          A Popup
        </span>
      </MenuItem>
      <MenuItem
        fitted="horizontally"
        position="right"
        style={
          Object {
            "flexDirection": "column",
          }
        }
      >
        <Icon
          as="i"
          name="expand arrows alternate"
        />
        <span
          style={
            Object {
              "fontSize": "11px",
              "visibility": "hidden",
            }
          }
        >
          Expand
        </span>
      </MenuItem>
    </Menu>
  </Menu>
</div>
`;

exports[`ComponentMenuBar Should match existing snapshot when expanded 1`] = `
<div
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <Menu
    secondary={true}
    style={
      Object {
        "height": "100%",
        "margin": 0,
      }
    }
    widths={2}
  >
    <Menu
      secondary={true}
      widths={1}
    >
      <MenuItem
        fitted="horizontally"
        position="left"
        style={
          Object {
            "margin": 0,
            "padding": 0,
          }
        }
      >
        The Boxer
      </MenuItem>
    </Menu>
    <Menu
      secondary={true}
      widths={4}
    >
      <MenuItem
        fitted="horizontally"
        position="right"
        style={
          Object {
            "flexDirection": "column",
          }
        }
      >
        <Icon
          as="i"
          name="compress"
        />
        <span
          style={
            Object {
              "fontSize": "11px",
              "visibility": "hidden",
            }
          }
        >
          Close
        </span>
      </MenuItem>
    </Menu>
  </Menu>
</div>
`;

exports[`ComponentMenuBar Should match existing snapshot when given default props. 1`] = `
<div
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <Menu
    secondary={true}
    style={
      Object {
        "height": "100%",
        "margin": 0,
      }
    }
    widths={2}
  >
    <Menu
      secondary={true}
      widths={1}
    >
      <MenuItem
        fitted="horizontally"
        position="left"
        style={
          Object {
            "margin": 0,
            "padding": 0,
          }
        }
      >
        The Boxer
      </MenuItem>
    </Menu>
    <Menu
      secondary={true}
      widths={4}
    >
      <MenuItem
        fitted="horizontally"
        position="right"
        style={
          Object {
            "flexDirection": "column",
          }
        }
      >
        <Icon
          as="i"
          name="expand arrows alternate"
        />
        <span
          style={
            Object {
              "fontSize": "11px",
              "visibility": "hidden",
            }
          }
        >
          Expand
        </span>
      </MenuItem>
    </Menu>
  </Menu>
</div>
`;

exports[`ComponentMenuBar Should render a Button Group menu item. 1`] = `
<div
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <Menu
    secondary={true}
    style={
      Object {
        "height": "100%",
        "margin": 0,
      }
    }
    widths={2}
  >
    <Menu
      secondary={true}
      widths={1}
    >
      <MenuItem
        fitted="horizontally"
        position="left"
        style={
          Object {
            "margin": 0,
            "padding": 0,
          }
        }
      >
        The Boxer
      </MenuItem>
    </Menu>
    <Menu
      secondary={true}
      widths={4}
    >
      <MenuItem
        fitted="horizontally"
        key="The Boxer-menu-item-0"
        position="right"
        style={
          Object {
            "flexDirection": "column",
          }
        }
      >
        <Popup
          closeOnPortalMouseLeave={false}
          closeOnTriggerClick={true}
          closeOnTriggerMouseLeave={false}
          disabled={false}
          hoverable={false}
          keepInViewPort={true}
          on="hover"
          openOnTriggerClick={true}
          openOnTriggerFocus={false}
          openOnTriggerMouseEnter={false}
          position="bottom left"
          style={
            Object {
              "opacity": 0.85,
            }
          }
          trigger={
            <Icon
              as="i"
              name="setting"
            />
          }
          wide={true}
        >
          <ConfigAccordion
            allowMultipleOpen={false}
            configs={
              Array [
                Object {
                  "Catcher": Array [
                    <GridRow
                      columns={1}
                      style={
                        Object {
                          "padding": "5px 0",
                          "width": "100%",
                        }
                      }
                    >
                      <Grid
                        padded={true}
                        style={
                          Object {
                            "padding": "initial 0",
                          }
                        }
                      >
                        <GridRow
                          columns={15}
                        >
                          <GridColumn
                            width={11}
                          >
                            Rye
                          </GridColumn>
                          <GridColumn
                            width={4}
                          >
                            <ButtonGroup
                              floated="right"
                              fluid={true}
                            >
                              <Button
                                as="button"
                                basic={true}
                                compact={true}
                                icon={
                                  <div>
                                    Howdy
                                  </div>
                                }
                              />
                              <Button
                                as="button"
                                basic={true}
                                compact={true}
                                icon={
                                  <div>
                                    Ho
                                  </div>
                                }
                              />
                            </ButtonGroup>
                          </GridColumn>
                        </GridRow>
                      </Grid>
                    </GridRow>,
                  ],
                },
              ]
            }
            gridStyle={
              Object {
                "marginTop": 0,
                "maxHeight": "350px",
                "overflow": "auto",
                "zIndex": 3,
              }
            }
            title="Config"
          />
        </Popup>
        <span
          style={
            Object {
              "fontSize": "11px",
              "visibility": "hidden",
            }
          }
        >
          A Popup
        </span>
      </MenuItem>
      <MenuItem
        fitted="horizontally"
        position="right"
        style={
          Object {
            "flexDirection": "column",
          }
        }
      >
        <Icon
          as="i"
          name="expand arrows alternate"
        />
        <span
          style={
            Object {
              "fontSize": "11px",
              "visibility": "hidden",
            }
          }
        >
          Expand
        </span>
      </MenuItem>
    </Menu>
  </Menu>
</div>
`;

exports[`ComponentMenuBar Should render a Button menu item with an icon. 1`] = `
<div
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <Menu
    secondary={true}
    style={
      Object {
        "height": "100%",
        "margin": 0,
      }
    }
    widths={2}
  >
    <Menu
      secondary={true}
      widths={1}
    >
      <MenuItem
        fitted="horizontally"
        position="left"
        style={
          Object {
            "margin": 0,
            "padding": 0,
          }
        }
      >
        The Boxer
      </MenuItem>
    </Menu>
    <Menu
      secondary={true}
      widths={4}
    >
      <MenuItem
        fitted="horizontally"
        key="The Boxer-menu-item-0"
        position="right"
        style={
          Object {
            "flexDirection": "column",
          }
        }
      >
        <Popup
          closeOnPortalMouseLeave={false}
          closeOnTriggerClick={true}
          closeOnTriggerMouseLeave={false}
          disabled={false}
          hoverable={false}
          keepInViewPort={true}
          on="hover"
          openOnTriggerClick={true}
          openOnTriggerFocus={false}
          openOnTriggerMouseEnter={false}
          position="bottom left"
          style={
            Object {
              "opacity": 0.85,
            }
          }
          trigger={
            <Icon
              as="i"
              name="setting"
            />
          }
          wide={true}
        >
          <ConfigAccordion
            allowMultipleOpen={false}
            configs={
              Array [
                Object {
                  "Catcher": Array [
                    <GridRow
                      columns={1}
                      style={
                        Object {
                          "padding": "5px 0",
                          "width": "100%",
                        }
                      }
                    >
                      <Button
                        as="button"
                        compact={true}
                        onClick={[Function]}
                      >
                        <Icon
                          as="i"
                          name="coffee"
                        />
                        Rye
                      </Button>
                    </GridRow>,
                  ],
                },
              ]
            }
            gridStyle={
              Object {
                "marginTop": 0,
                "maxHeight": "350px",
                "overflow": "auto",
                "zIndex": 3,
              }
            }
            title="Config"
          />
        </Popup>
        <span
          style={
            Object {
              "fontSize": "11px",
              "visibility": "hidden",
            }
          }
        >
          A Popup
        </span>
      </MenuItem>
      <MenuItem
        fitted="horizontally"
        position="right"
        style={
          Object {
            "flexDirection": "column",
          }
        }
      >
        <Icon
          as="i"
          name="expand arrows alternate"
        />
        <span
          style={
            Object {
              "fontSize": "11px",
              "visibility": "hidden",
            }
          }
        >
          Expand
        </span>
      </MenuItem>
    </Menu>
  </Menu>
</div>
`;

exports[`ComponentMenuBar Should render a Button menu item. 1`] = `
<div
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <Menu
    secondary={true}
    style={
      Object {
        "height": "100%",
        "margin": 0,
      }
    }
    widths={2}
  >
    <Menu
      secondary={true}
      widths={1}
    >
      <MenuItem
        fitted="horizontally"
        position="left"
        style={
          Object {
            "margin": 0,
            "padding": 0,
          }
        }
      >
        The Boxer
      </MenuItem>
    </Menu>
    <Menu
      secondary={true}
      widths={4}
    >
      <MenuItem
        fitted="horizontally"
        key="The Boxer-menu-item-0"
        position="right"
        style={
          Object {
            "flexDirection": "column",
          }
        }
      >
        <Popup
          closeOnPortalMouseLeave={false}
          closeOnTriggerClick={true}
          closeOnTriggerMouseLeave={false}
          disabled={false}
          hoverable={false}
          keepInViewPort={true}
          on="hover"
          openOnTriggerClick={true}
          openOnTriggerFocus={false}
          openOnTriggerMouseEnter={false}
          position="bottom left"
          style={
            Object {
              "opacity": 0.85,
            }
          }
          trigger={
            <Icon
              as="i"
              name="setting"
            />
          }
          wide={true}
        >
          <ConfigAccordion
            allowMultipleOpen={false}
            configs={
              Array [
                Object {
                  "Catcher": Array [
                    <GridRow
                      columns={1}
                      style={
                        Object {
                          "padding": "5px 0",
                          "width": "100%",
                        }
                      }
                    >
                      <Button
                        as="button"
                        compact={true}
                        onClick={[Function]}
                      >
                        Rye
                      </Button>
                    </GridRow>,
                  ],
                },
              ]
            }
            gridStyle={
              Object {
                "marginTop": 0,
                "maxHeight": "350px",
                "overflow": "auto",
                "zIndex": 3,
              }
            }
            title="Config"
          />
        </Popup>
        <span
          style={
            Object {
              "fontSize": "11px",
              "visibility": "hidden",
            }
          }
        >
          A Popup
        </span>
      </MenuItem>
      <MenuItem
        fitted="horizontally"
        position="right"
        style={
          Object {
            "flexDirection": "column",
          }
        }
      >
        <Icon
          as="i"
          name="expand arrows alternate"
        />
        <span
          style={
            Object {
              "fontSize": "11px",
              "visibility": "hidden",
            }
          }
        >
          Expand
        </span>
      </MenuItem>
    </Menu>
  </Menu>
</div>
`;

exports[`ComponentMenuBar Should render a Label menu item. 1`] = `
<div
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <Menu
    secondary={true}
    style={
      Object {
        "height": "100%",
        "margin": 0,
      }
    }
    widths={2}
  >
    <Menu
      secondary={true}
      widths={1}
    >
      <MenuItem
        fitted="horizontally"
        position="left"
        style={
          Object {
            "margin": 0,
            "padding": 0,
          }
        }
      >
        The Boxer
      </MenuItem>
    </Menu>
    <Menu
      secondary={true}
      widths={4}
    >
      <MenuItem
        fitted="horizontally"
        key="The Boxer-menu-item-0"
        position="right"
        style={
          Object {
            "flexDirection": "column",
          }
        }
      >
        <Popup
          closeOnPortalMouseLeave={false}
          closeOnTriggerClick={true}
          closeOnTriggerMouseLeave={false}
          disabled={false}
          hoverable={false}
          keepInViewPort={true}
          on="hover"
          openOnTriggerClick={true}
          openOnTriggerFocus={false}
          openOnTriggerMouseEnter={false}
          position="bottom left"
          style={
            Object {
              "opacity": 0.85,
            }
          }
          trigger={
            <Icon
              as="i"
              name="setting"
            />
          }
          wide={true}
        >
          <ConfigAccordion
            allowMultipleOpen={false}
            configs={
              Array [
                Object {
                  "Catcher": Array [
                    <GridRow
                      columns={1}
                      style={
                        Object {
                          "padding": "5px 0",
                          "width": "100%",
                        }
                      }
                    >
                      <Label
                        basic={true}
                        color="orange"
                      >
                        Rye
                      </Label>
                    </GridRow>,
                  ],
                },
              ]
            }
            gridStyle={
              Object {
                "marginTop": 0,
                "maxHeight": "350px",
                "overflow": "auto",
                "zIndex": 3,
              }
            }
            title="Config"
          />
        </Popup>
        <span
          style={
            Object {
              "fontSize": "11px",
              "visibility": "hidden",
            }
          }
        >
          A Popup
        </span>
      </MenuItem>
      <MenuItem
        fitted="horizontally"
        position="right"
        style={
          Object {
            "flexDirection": "column",
          }
        }
      >
        <Icon
          as="i"
          name="expand arrows alternate"
        />
        <span
          style={
            Object {
              "fontSize": "11px",
              "visibility": "hidden",
            }
          }
        >
          Expand
        </span>
      </MenuItem>
    </Menu>
  </Menu>
</div>
`;

exports[`ComponentMenuBar Should render a Radio menu item. 1`] = `
<div
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <Menu
    secondary={true}
    style={
      Object {
        "height": "100%",
        "margin": 0,
      }
    }
    widths={2}
  >
    <Menu
      secondary={true}
      widths={1}
    >
      <MenuItem
        fitted="horizontally"
        position="left"
        style={
          Object {
            "margin": 0,
            "padding": 0,
          }
        }
      >
        The Boxer
      </MenuItem>
    </Menu>
    <Menu
      secondary={true}
      widths={4}
    >
      <MenuItem
        fitted="horizontally"
        key="The Boxer-menu-item-0"
        position="right"
        style={
          Object {
            "flexDirection": "column",
          }
        }
      >
        <Popup
          closeOnPortalMouseLeave={false}
          closeOnTriggerClick={true}
          closeOnTriggerMouseLeave={false}
          disabled={false}
          hoverable={false}
          keepInViewPort={true}
          on="hover"
          openOnTriggerClick={true}
          openOnTriggerFocus={false}
          openOnTriggerMouseEnter={false}
          position="bottom left"
          style={
            Object {
              "opacity": 0.85,
            }
          }
          trigger={
            <Icon
              as="i"
              name="setting"
            />
          }
          wide={true}
        >
          <ConfigAccordion
            allowMultipleOpen={false}
            configs={
              Array [
                Object {
                  "Catcher": Array [
                    <GridRow
                      columns={1}
                      style={
                        Object {
                          "padding": "5px 0",
                          "width": "100%",
                        }
                      }
                    >
                      <BioblocksRadioGroup
                        disabled={false}
                        id="radio-Catcher-row-0"
                        options={
                          Array [
                            "Ludo",
                            "Queen",
                          ]
                        }
                        selectedOption="Ludo"
                        style={Object {}}
                        title="Rye"
                      />
                    </GridRow>,
                  ],
                },
              ]
            }
            gridStyle={
              Object {
                "marginTop": 0,
                "maxHeight": "350px",
                "overflow": "auto",
                "zIndex": 3,
              }
            }
            title="Config"
          />
        </Popup>
        <span
          style={
            Object {
              "fontSize": "11px",
              "visibility": "hidden",
            }
          }
        >
          A Popup
        </span>
      </MenuItem>
      <MenuItem
        fitted="horizontally"
        position="right"
        style={
          Object {
            "flexDirection": "column",
          }
        }
      >
        <Icon
          as="i"
          name="expand arrows alternate"
        />
        <span
          style={
            Object {
              "fontSize": "11px",
              "visibility": "hidden",
            }
          }
        >
          Expand
        </span>
      </MenuItem>
    </Menu>
  </Menu>
</div>
`;

exports[`ComponentMenuBar Should render a Range Slider menu item. 1`] = `
<div
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <Menu
    secondary={true}
    style={
      Object {
        "height": "100%",
        "margin": 0,
      }
    }
    widths={2}
  >
    <Menu
      secondary={true}
      widths={1}
    >
      <MenuItem
        fitted="horizontally"
        position="left"
        style={
          Object {
            "margin": 0,
            "padding": 0,
          }
        }
      >
        The Boxer
      </MenuItem>
    </Menu>
    <Menu
      secondary={true}
      widths={4}
    >
      <MenuItem
        fitted="horizontally"
        key="The Boxer-menu-item-0"
        position="right"
        style={
          Object {
            "flexDirection": "column",
          }
        }
      >
        <Popup
          closeOnPortalMouseLeave={false}
          closeOnTriggerClick={true}
          closeOnTriggerMouseLeave={false}
          disabled={false}
          hoverable={false}
          keepInViewPort={true}
          on="hover"
          openOnTriggerClick={true}
          openOnTriggerFocus={false}
          openOnTriggerMouseEnter={false}
          position="bottom left"
          style={
            Object {
              "opacity": 0.85,
            }
          }
          trigger={
            <Icon
              as="i"
              name="setting"
            />
          }
          wide={true}
        >
          <ConfigAccordion
            allowMultipleOpen={false}
            configs={
              Array [
                Object {
                  "Catcher": Array [
                    <GridRow
                      columns={1}
                      style={
                        Object {
                          "padding": "5px 0",
                          "width": "100%",
                        }
                      }
                    >
                      <BioblocksRangeSlider
                        defaultValue={
                          Array [
                            1,
                            3,
                          ]
                        }
                        label="Rye"
                        max={4}
                        min={0}
                        style={
                          Object {
                            "padding": "2px 0 3px 18px",
                            "width": "100%",
                          }
                        }
                        value={
                          Array [
                            1,
                            3,
                          ]
                        }
                      />
                    </GridRow>,
                  ],
                },
              ]
            }
            gridStyle={
              Object {
                "marginTop": 0,
                "maxHeight": "350px",
                "overflow": "auto",
                "zIndex": 3,
              }
            }
            title="Config"
          />
        </Popup>
        <span
          style={
            Object {
              "fontSize": "11px",
              "visibility": "hidden",
            }
          }
        >
          A Popup
        </span>
      </MenuItem>
      <MenuItem
        fitted="horizontally"
        position="right"
        style={
          Object {
            "flexDirection": "column",
          }
        }
      >
        <Icon
          as="i"
          name="expand arrows alternate"
        />
        <span
          style={
            Object {
              "fontSize": "11px",
              "visibility": "hidden",
            }
          }
        >
          Expand
        </span>
      </MenuItem>
    </Menu>
  </Menu>
</div>
`;

exports[`ComponentMenuBar Should render a Slider menu item. 1`] = `
<div
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <Menu
    secondary={true}
    style={
      Object {
        "height": "100%",
        "margin": 0,
      }
    }
    widths={2}
  >
    <Menu
      secondary={true}
      widths={1}
    >
      <MenuItem
        fitted="horizontally"
        position="left"
        style={
          Object {
            "margin": 0,
            "padding": 0,
          }
        }
      >
        The Boxer
      </MenuItem>
    </Menu>
    <Menu
      secondary={true}
      widths={4}
    >
      <MenuItem
        fitted="horizontally"
        key="The Boxer-menu-item-0"
        position="right"
        style={
          Object {
            "flexDirection": "column",
          }
        }
      >
        <Popup
          closeOnPortalMouseLeave={false}
          closeOnTriggerClick={true}
          closeOnTriggerMouseLeave={false}
          disabled={false}
          hoverable={false}
          keepInViewPort={true}
          on="hover"
          openOnTriggerClick={true}
          openOnTriggerFocus={false}
          openOnTriggerMouseEnter={false}
          position="bottom left"
          style={
            Object {
              "opacity": 0.85,
            }
          }
          trigger={
            <Icon
              as="i"
              name="setting"
            />
          }
          wide={true}
        >
          <ConfigAccordion
            allowMultipleOpen={false}
            configs={
              Array [
                Object {
                  "Catcher": Array [
                    <GridRow
                      columns={1}
                      style={
                        Object {
                          "padding": "5px 0",
                          "width": "100%",
                        }
                      }
                    >
                      <BioblocksSlider
                        defaultValue={2}
                        label="Rye"
                        max={4}
                        min={0}
                        style={
                          Object {
                            "padding": "2px 0 3px 18px",
                            "width": "100%",
                          }
                        }
                        value={2}
                      />
                    </GridRow>,
                  ],
                },
              ]
            }
            gridStyle={
              Object {
                "marginTop": 0,
                "maxHeight": "350px",
                "overflow": "auto",
                "zIndex": 3,
              }
            }
            title="Config"
          />
        </Popup>
        <span
          style={
            Object {
              "fontSize": "11px",
              "visibility": "hidden",
            }
          }
        >
          A Popup
        </span>
      </MenuItem>
      <MenuItem
        fitted="horizontally"
        position="right"
        style={
          Object {
            "flexDirection": "column",
          }
        }
      >
        <Icon
          as="i"
          name="expand arrows alternate"
        />
        <span
          style={
            Object {
              "fontSize": "11px",
              "visibility": "hidden",
            }
          }
        >
          Expand
        </span>
      </MenuItem>
    </Menu>
  </Menu>
</div>
`;

exports[`ComponentMenuBar Should render a Toggle menu item. 1`] = `
<div
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <Menu
    secondary={true}
    style={
      Object {
        "height": "100%",
        "margin": 0,
      }
    }
    widths={2}
  >
    <Menu
      secondary={true}
      widths={1}
    >
      <MenuItem
        fitted="horizontally"
        position="left"
        style={
          Object {
            "margin": 0,
            "padding": 0,
          }
        }
      >
        The Boxer
      </MenuItem>
    </Menu>
    <Menu
      secondary={true}
      widths={4}
    >
      <MenuItem
        fitted="horizontally"
        key="The Boxer-menu-item-0"
        position="right"
        style={
          Object {
            "flexDirection": "column",
          }
        }
      >
        <Popup
          closeOnPortalMouseLeave={false}
          closeOnTriggerClick={true}
          closeOnTriggerMouseLeave={false}
          disabled={false}
          hoverable={false}
          keepInViewPort={true}
          on="hover"
          openOnTriggerClick={true}
          openOnTriggerFocus={false}
          openOnTriggerMouseEnter={false}
          position="bottom left"
          style={
            Object {
              "opacity": 0.85,
            }
          }
          trigger={
            <Icon
              as="i"
              name="setting"
            />
          }
          wide={true}
        >
          <ConfigAccordion
            allowMultipleOpen={false}
            configs={
              Array [
                Object {
                  "Catcher": Array [
                    <GridRow
                      columns={1}
                      style={
                        Object {
                          "padding": "5px 0",
                          "width": "100%",
                        }
                      }
                    >
                      <BioblocksToggleButton
                        config={
                          Object {
                            "currentOption": "off",
                            "name": "Rye",
                            "options": Object {
                              "off": "Deactivate",
                              "on": "Activate",
                            },
                            "type": "TOGGLE",
                          }
                        }
                      />
                    </GridRow>,
                  ],
                },
              ]
            }
            gridStyle={
              Object {
                "marginTop": 0,
                "maxHeight": "350px",
                "overflow": "auto",
                "zIndex": 3,
              }
            }
            title="Config"
          />
        </Popup>
        <span
          style={
            Object {
              "fontSize": "11px",
              "visibility": "hidden",
            }
          }
        >
          A Popup
        </span>
      </MenuItem>
      <MenuItem
        fitted="horizontally"
        position="right"
        style={
          Object {
            "flexDirection": "column",
          }
        }
      >
        <Icon
          as="i"
          name="expand arrows alternate"
        />
        <span
          style={
            Object {
              "fontSize": "11px",
              "visibility": "hidden",
            }
          }
        >
          Expand
        </span>
      </MenuItem>
    </Menu>
  </Menu>
</div>
`;

exports[`ComponentMenuBar Should render popup menu items. 1`] = `
<div
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <Menu
    secondary={true}
    style={
      Object {
        "height": "100%",
        "margin": 0,
      }
    }
    widths={2}
  >
    <Menu
      secondary={true}
      widths={1}
    >
      <MenuItem
        fitted="horizontally"
        position="left"
        style={
          Object {
            "margin": 0,
            "padding": 0,
          }
        }
      >
        The Boxer
      </MenuItem>
    </Menu>
    <Menu
      secondary={true}
      widths={4}
    >
      <MenuItem
        fitted="horizontally"
        key="The Boxer-menu-item-0"
        position="right"
        style={
          Object {
            "flexDirection": "column",
          }
        }
      >
        <Popup
          closeOnPortalMouseLeave={false}
          closeOnTriggerClick={true}
          closeOnTriggerMouseLeave={false}
          disabled={false}
          hoverable={false}
          keepInViewPort={true}
          on="hover"
          openOnTriggerClick={true}
          openOnTriggerFocus={false}
          openOnTriggerMouseEnter={false}
          position="bottom left"
          style={
            Object {
              "opacity": 0.85,
            }
          }
          trigger={
            <Icon
              as="i"
              name="setting"
            />
          }
        />
        <span
          style={
            Object {
              "fontSize": "11px",
              "visibility": "hidden",
            }
          }
        >
          A Popup
        </span>
      </MenuItem>
      <MenuItem
        fitted="horizontally"
        position="right"
        style={
          Object {
            "flexDirection": "column",
          }
        }
      >
        <Icon
          as="i"
          name="expand arrows alternate"
        />
        <span
          style={
            Object {
              "fontSize": "11px",
              "visibility": "hidden",
            }
          }
        >
          Expand
        </span>
      </MenuItem>
    </Menu>
  </Menu>
</div>
`;
